# werge

./: CHANGELOG.md  Main.hs  Opts.hs  Progs.hs  README.md  Toks.hs  werge.cabal
.github/workflows/: build.yml
debian/: changelog  control  copyright  werge.install
vim/: werge.vim  wergediff.vim
