cabal-version:   3.0
name:            werge
version:         0.2.1.1
synopsis:        mergetool for mangled-up bite-size changes
description:     werge is able to effectively diff, patch and merge various
                 annoying changes that make usual line-based merging
                 impossible. For example, it can automatically resolve
                 non-conflicting edits in a long sentence on a single line, and
                 merges changes done on different code formatting and
                 indentation, or even in differently justified paragraphs.
license:         GPL-3.0-or-later
license-file:    LICENSE
copyright:       (c) 2025 Mirek Kratochvil
author:          Mirek Kratochvil
maintainer:      exa.exa@gmail.com

-- copyright:
category:        Text
build-type:      Simple
extra-doc-files: README.md vim/werge.vim

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable werge
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Opts
    Paths_werge
    Progs
    Toks

  autogen-modules:  Paths_werge
  build-depends:
    , base                  >=4.15 && <5
    , filepath
    , optparse-applicative
    , process
    , temporary

  hs-source-dirs:   .
  default-language: Haskell2010
